--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 .filtros {
   position: absolute;
   top: 12px;
-  left: 20px;
-  right: 20px;
+  left: 12px;
+  right: 12px;
   z-index: 1000;
   display: flex;
   flex-wrap: wrap;
@@ -38,17 +38,15 @@
 .select-wrapper {
   display: flex;
   flex-direction: column;
-  min-width: 150px;
-  max-width: 200px;
+  min-width: 140px;
   flex: 1 1 auto;
-   font-weight: bold;
 }
 
 .select-wrapper label {
   font-size: 12px;
-  color: #444;
+  color: #333;
   margin-bottom: 3px;
-  padding-left: 4px;
+  font-weight: bold;
 }
 
 .choices {
@@ -56,10 +54,10 @@
   border-radius: 16px;
   border: 1px solid #ccc;
   font-size: 13px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.08);
   padding: 0;
-  transition: all 0.2s ease-in-out;
   max-width: 100%;
+  min-width: 100%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.08);
 }
 
 .choices__inner {
@@ -67,31 +65,25 @@
   border: none !important;
   box-shadow: none !important;
   min-height: 34px !important;
-  line-height: 5px !important;
-  padding: 4px 8px !important;
-  font-size: 10px;
+  line-height: 20px !important;
+  padding: 6px 10px !important;
+  font-size: 13px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.choices__inner:focus-within {
-  white-space: normal;
-  overflow: visible;
-}
-
 .choices__list--dropdown .choices__item {
-  font-size: 10px;
-  padding: 6px 10px;
+  font-size: 13px;
+  padding: 8px 10px;
   white-space: normal;
   word-break: break-word;
-  max-width: 100%;
   overflow: visible;
 }
 
 #botaoHeatmap {
   position: fixed;
-  bottom: 80px;
+  bottom: 90px;
   left: 20px;
   z-index: 1000;
   background-color: white;
@@ -119,24 +111,25 @@
 @media (max-width: 768px) {
   .filtros {
     flex-direction: column;
-    left: 10px;
-    right: 10px;
+    gap: 10px;
   }
 
   .select-wrapper {
-    min-width: 100%;
+    width: 100%;
   }
 
-  .choices {
-    font-size: 10px;
+  .choices__inner {
+    font-size: 14px;
   }
 
   #botaoHeatmap {
     bottom: 110px;
+    left: 16px;
   }
 
   #legenda {
-    bottom: 70px;
+    bottom: 60px;
+    left: 16px;
   }
 }
 
