--- a/index.html
+++ b/index.html
@@ -25,56 +25,54 @@
     }
 .filtros {
   position: absolute;
-  top: 12px;
-  left: 12px;
-  right: 12px;
+  top: 10px;
+  left: 10px;
   z-index: 1000;
   display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
+  flex-direction: column;
+  gap: 10px;
   font-family: "Segoe UI", sans-serif;
+  width: calc(100vw - 20px);
+  max-width: 380px;
 }
 
 .select-wrapper {
   display: flex;
   flex-direction: column;
-  min-width: 140px;
-  flex: 1 1 auto;
+  width: 100%;
 }
 
 .select-wrapper label {
-  font-size: 12px;
-  color: #333;
-  margin-bottom: 3px;
+  font-size: 13px;
   font-weight: bold;
+  color: #333;
+  margin-bottom: 2px;
 }
 
 .choices {
   background: #fff;
-  border-radius: 16px;
+  border-radius: 12px;
   border: 1px solid #ccc;
-  font-size: 13px;
-  padding: 0;
-  max-width: 100%;
-  min-width: 100%;
+  font-size: 14px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.08);
+  padding: 0;
+  width: 100%;
 }
 
 .choices__inner {
   background-color: transparent;
   border: none !important;
   box-shadow: none !important;
-  min-height: 34px !important;
-  line-height: 20px !important;
+  min-height: 36px !important;
   padding: 6px 10px !important;
-  font-size: 13px;
-  white-space: nowrap;
+  font-size: 14px;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
 }
 
 .choices__list--dropdown .choices__item {
-  font-size: 13px;
+  font-size: 14px;
   padding: 8px 10px;
   white-space: normal;
   word-break: break-word;
@@ -83,13 +81,13 @@
 
 #botaoHeatmap {
   position: fixed;
-  bottom: 90px;
-  left: 20px;
+  bottom: 100px;
+  left: 16px;
   z-index: 1000;
   background-color: white;
-  padding: 8px 14px;
+  padding: 10px 16px;
   border-radius: 16px;
-  font-size: 13px;
+  font-size: 14px;
   font-family: "Segoe UI", sans-serif;
   border: 1px solid #ccc;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
@@ -97,42 +95,16 @@
 
 #legenda {
   position: fixed;
-  bottom: 20px;
-  left: 20px;
+  bottom: 60px;
+  left: 16px;
   z-index: 999;
   background: white;
   padding: 6px 12px;
   border-radius: 16px;
-  font-size: 12px;
+  font-size: 13px;
   font-family: "Segoe UI", sans-serif;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
-
-@media (max-width: 768px) {
-  .filtros {
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .select-wrapper {
-    width: 100%;
-  }
-
-  .choices__inner {
-    font-size: 14px;
-  }
-
-  #botaoHeatmap {
-    bottom: 110px;
-    left: 16px;
-  }
-
-  #legenda {
-    bottom: 60px;
-    left: 16px;
-  }
-}
-
 
 
 
