--- a/index.html
+++ b/index.html
@@ -24,59 +24,62 @@
       z-index: 0;
     }
 .filtros {
+  display: none;
+  flex-direction: column;
+  gap: 10px;
+  padding: 14px;
   position: absolute;
   top: 10px;
   left: 10px;
-  z-index: 1000;
+  z-index: 1001;
+  background: rgba(255, 255, 255, 0.95);
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  width: calc(100vw - 40px);
+  max-width: 360px;
+}
+
+.filtros.ativo {
   display: flex;
-  flex-direction: column;
-  gap: 10px;
-  font-family: "Segoe UI", sans-serif;
-  width: calc(100vw - 20px);
-  max-width: 380px;
 }
 
 .select-wrapper {
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 
 .select-wrapper label {
   font-size: 13px;
   font-weight: bold;
-  color: #333;
-  margin-bottom: 2px;
+  margin-bottom: 3px;
 }
 
 .choices {
-  background: #fff;
   border-radius: 12px;
-  border: 1px solid #ccc;
-  font-size: 14px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.08);
-  padding: 0;
-  width: 100%;
+  font-size: 13px;
 }
 
 .choices__inner {
-  background-color: transparent;
-  border: none !important;
-  box-shadow: none !important;
   min-height: 36px !important;
   padding: 6px 10px !important;
-  font-size: 14px;
-  overflow: hidden;
+  font-size: 13px;
   white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.choices__list--dropdown .choices__item {
+.botao-filtros {
+  position: fixed;
+  top: 12px;
+  right: 12px;
+  background: white;
+  border: 1px solid #ccc;
+  padding: 8px 14px;
+  border-radius: 16px;
   font-size: 14px;
-  padding: 8px 10px;
-  white-space: normal;
-  word-break: break-word;
-  overflow: visible;
+  z-index: 1002;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  cursor: pointer;
 }
 
 #botaoHeatmap {
@@ -88,7 +91,6 @@
   padding: 10px 16px;
   border-radius: 16px;
   font-size: 14px;
-  font-family: "Segoe UI", sans-serif;
   border: 1px solid #ccc;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
@@ -102,9 +104,10 @@
   padding: 6px 12px;
   border-radius: 16px;
   font-size: 13px;
-  font-family: "Segoe UI", sans-serif;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
+
+
 
 
 
