--- a/index.html
+++ b/index.html
@@ -2,125 +2,128 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8" />
-  <title>Mapa Interativo - Ambev</title>
+  <title>Mapa Interativo - Google Usabilidade</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
-
   <style>
-    html, body {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-
-    #map {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      z-index: 0;
-    }
 .filtros {
-  display: none;
-  flex-direction: column;
-  gap: 10px;
-  padding: 14px;
   position: absolute;
-  top: 10px;
-  left: 10px;
-  z-index: 1001;
-  background: rgba(255, 255, 255, 0.95);
-  border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  width: calc(100vw - 40px);
-  max-width: 360px;
-}
-
-.filtros.ativo {
+  top: 16px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
   display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  font-family: "Segoe UI", sans-serif;
+  justify-content: center;
+  background: transparent;
+  max-width: 95%;
 }
 
 .select-wrapper {
-  display: flex;
-  flex-direction: column;
+  flex: 0 0 auto;
+  min-width: 180px;
 }
 
-.select-wrapper label {
-  font-size: 13px;
-  font-weight: bold;
-  margin-bottom: 3px;
+.select-wrapper select {
+  display: none;
 }
 
 .choices {
-  border-radius: 12px;
-  font-size: 13px;
+  border: none;
+  background: #fff;
+  border-radius: 30px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+  font-size: 14px;
+  padding: 4px 12px;
+  max-width: 240px;
 }
 
 .choices__inner {
-  min-height: 36px !important;
-  padding: 6px 10px !important;
-  font-size: 13px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  border: none !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+  min-height: 38px !important;
+  line-height: 20px !important;
+  padding: 6px 0px !important;
+  white-space: normal !important;
+  overflow: visible !important;
+  word-break: normal !important;
 }
 
-.botao-filtros {
-  position: fixed;
-  top: 12px;
-  right: 12px;
-  background: white;
-  border: 1px solid #ccc;
-  padding: 8px 14px;
-  border-radius: 16px;
-  font-size: 14px;
-  z-index: 1002;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  cursor: pointer;
+.choices__list--dropdown .choices__item {
+  font-size: 13px;
+  padding: 8px 10px;
+  white-space: normal;
+  word-break: break-word;
+  overflow: visible;
+  max-width: none;
 }
 
 #botaoHeatmap {
   position: fixed;
-  bottom: 100px;
-  left: 16px;
+  bottom: 80px;
+  left: 20px;
   z-index: 1000;
   background-color: white;
-  padding: 10px 16px;
-  border-radius: 16px;
-  font-size: 14px;
+  padding: 8px 14px;
+  border-radius: 20px;
+  font-size: 13px;
+  font-family: "Segoe UI", sans-serif;
   border: 1px solid #ccc;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
 
 #legenda {
   position: fixed;
-  bottom: 60px;
-  left: 16px;
+  bottom: 20px;
+  left: 20px;
   z-index: 999;
   background: white;
   padding: 6px 12px;
-  border-radius: 16px;
-  font-size: 13px;
+  border-radius: 20px;
+  font-size: 12px;
+  font-family: "Segoe UI", sans-serif;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
 
+@media (max-width: 768px) {
+  .filtros {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    left: 10px;
+    transform: none;
+  }
 
+  .select-wrapper {
+    min-width: 160px;
+  }
 
+  .choices {
+    max-width: 180px;
+    font-size: 13px;
+  }
 
+  #botaoHeatmap {
+    bottom: 110px;
+  }
 
-  </style>
+  #legenda {
+    bottom: 70px;
+  }
+}
+</style>
 </head>
 <body>
   <div class="filtros">
-    <div class="select-wrapper"><label>CDD</label><select id="filtroCDD" multiple></select></div>
-    <div class="select-wrapper"><label>GN</label><select id="filtroGN" multiple></select></div>
-    <div class="select-wrapper"><label>Inplant</label><select id="filtroInplant" multiple></select></div>
-    <div class="select-wrapper"><label>Rede</label><select id="filtroRede" multiple></select></div>
-    <div class="select-wrapper"><label>Dia</label><select id="filtroDia" multiple></select></div>
-    <div class="select-wrapper"><label>Eg Cliente</label><select id="filtroEGDV" multiple></select></div>
+    <div class="select-wrapper"><select id="filtroCDD" multiple placeholder="CDD"></select></div>
+    <div class="select-wrapper"><select id="filtroGN" multiple placeholder="GN"></select></div>
+    <div class="select-wrapper"><select id="filtroInplant" multiple placeholder="Inplant"></select></div>
+    <div class="select-wrapper"><select id="filtroRede" multiple placeholder="Rede"></select></div>
+    <div class="select-wrapper"><select id="filtroDia" multiple placeholder="Dia"></select></div>
+    <div class="select-wrapper"><select id="filtroEGDV" multiple placeholder="Eg Cliente"></select></div>
   </div>
 
   <button id="botaoHeatmap">Ativar Heatmap</button>
@@ -142,8 +145,8 @@
   <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-
   <script>
+    
     const url = 'https://raw.githubusercontent.com/marianarizzo/siteambev/main/Planner%20CSV.csv';
     const map = L.map('map').setView([-15.7797, -47.9297], 5);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
@@ -170,7 +173,7 @@
       Inplant: new Choices('#filtroInplant', { removeItemButton: true }),
       Rede: new Choices('#filtroRede', { removeItemButton: true }),
       Dia: new Choices('#filtroDia', { removeItemButton: true }),
-      EGDV: new Choices('#filtroEGDV', { removeItemButton: true }) // Eg Cliente
+      EGDV: new Choices('#filtroEGDV', { removeItemButton: true })
     };
 
     function preencherFiltros(dados, chave, controle) {
@@ -294,6 +297,7 @@
         });
       }
     });
+  
   </script>
 </body>
 </html>
