--- a/index.html
+++ b/index.html
@@ -98,25 +98,32 @@
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
 
-#legenda {
-  position: fixed;
-  bottom: 20px;
-  left: 20px;
-  z-index: 999;
-  background: white;
-  padding: 6px 12px;
-  border-radius: 16px;
-  font-size: 1px;
-  font-family: "Segoe UI", sans-serif;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.15);
-}
+  #legenda {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      z-index: 999;
+      background: white;
+      padding: 8px 14px;
+      border-radius: 12px;
+      font-size: 13px;
+      font-family: "Segoe UI", sans-serif;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+      max-width: 90%;
+      overflow-wrap: break-word;
+    }
 
-@media (max-width: 768px) {
-  .filtros {
-    flex-direction: column;
-    left: 10px;
-    right: 10px;
-  }
+ @media (max-width: 768px) {
+      #legenda {
+        font-size: 13px;
+        padding: 10px;
+        bottom: 60px;
+        left: 10px;
+        right: 10px;
+        text-align: center;
+        border-radius: 10px;
+      }
+    }
 
   .select-wrapper {
     min-width: 100%;
