--- a/index.html
+++ b/index.html
@@ -98,18 +98,23 @@
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
 
-#legenda {
-  position: fixed;
-  bottom: 20px;
-  left: 20px;
-  z-index: 999;
-  background: white;
-  padding: 6px 12px;
-  border-radius: 16px;
-  font-size: 1px;
-  font-family: "Segoe UI", sans-serif;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.15);
-}
+  #legenda {
+      position: fixed;
+      bottom: 20px;
+      left: 10px;
+      right: 10px;
+      z-index: 999;
+      background: white;
+      padding: 10px;
+      border-radius: 16px;
+      font-size: 11px;
+      font-family: "Segoe UI", sans-serif;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.15);
+      text-align: center;
+      word-wrap: break-word;
+      line-height: 1.4em;
+    }
+
 
 @media (max-width: 768px) {
   .filtros {
