--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 .filtros {
   position: absolute;
   top: 16px;
-  left: 50%;
+  left: 80%;
   z-index: 1000;
-  display: flex;
+  display: inline-table;
   flex-wrap: wrap;
   gap: 2px;
   font-family: "Segoe UI", sans-serif;
   justify-content: center;
   background: transparent;
-  max-width: 95%;
+  max-width: 100%;
 }
 
 .select-wrapper {
@@ -61,11 +61,11 @@
   background-color: transparent !important;
   box-shadow: none !important;
   min-height: 38px !important;
-  line-height: 20px !important;
+  line-height: line !important;
   padding: 6px 0px !important;
-  white-space: normal !important;
-  overflow: visible !important;
-  word-break: normal !important;
+  white-space: pre !important;
+  overflow: auto !important;
+  word-break: keep-all !important;
 }
 
 
@@ -79,7 +79,7 @@
   font-size: 10px;
   padding: 6px 10px;
   white-space: normal;
-  word-break: break-word;
+  word-break: keep-all;
   max-width: 100%;
   overflow: visible;
 }
